tests/base/valid/Process_Valid_4.whiley
import * from whiley.lang.*

void ::main(System.Console sys):
    sys.out.println("Hello World")
