tests/base/invalid/String_Invalid_2.whiley
import println from whiley.lang.System

public void ::main(System.Console console):
	sys.out.println("\")